10/28/15-23:14:03: Initial commit
10/30/15-22:31:49: Added resource folder with initial version of app logo.
10/30/15-22:43:49: Updated app launcher image.
10/30/15-23:19:22: Added simple background on default fragment.
10/31/15-09:37:08: Adding font resources.
10/31/15-09:38:34: Ignoring temp folder.
10/31/15-13:56:19: Added display for first addition operation.
10/31/15-18:25:20: Added initial event handlers for number buttons.