@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#002e2e2e" />
+    <stroke android:width="2dp" android:color="#f13e3e"></stroke>
+    <corners android:radius="10dp"></corners>
+</shape>
